employee detail by jquery

--- a/src/main/webapp/resources/html/employee.html
+++ b/src/main/webapp/resources/html/employee.html
@@ -8,8 +8,8 @@
 
     <body>
         <div>
-            <p class="emp-id">The Employee ID : </p>
-            <p class="emp-name">The Employee Name: </p>
+            <p id="emp-id"> </p>
+            <p id="emp-name"></p>
         </div>
     </body>
 </html>
